--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@fontsource/montserrat": "^5.0.18",
     "@fontsource/poppins": "^5.0.14",
+    "@radix-ui/react-menubar": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.0",
     "tailwind-merge": "^2.5.1",
     "tailwindcss-animate": "^1.0.7"
   },
