--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@fontsource/montserrat": "^5.0.18",
     "@fontsource/poppins": "^5.0.14",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
@@ -31,6 +33,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.12.4",
     "tailwind-merge": "^2.5.1",
     "tailwindcss-animate": "^1.0.7"
   },
